load("@rules_rust//rust:defs.bzl", "rust_doc", "rust_doc_test", "rust_library")

rust_library(
    name = "common_errors",
    srcs = glob([
        "src/*.rs",
    ]),
    crate_root = "src/lib.rs",
    tags = [
        "common",
        "common_errors",
    ],
    visibility = ["//visibility:public"],
    deps = [
        # Internal crates
    ],
)

rust_doc(
    name = "doc",
    crate = ":common_errors",
    tags = ["doc"],
    visibility = ["//visibility:public"],
)

rust_doc_test(
    name = "doc_test",
    crate = ":common_errors",
    tags = ["doc-test"],
    visibility = ["//visibility:public"],
)
