load("@rules_rust//rust:defs.bzl", "rust_doc", "rust_doc_test", "rust_library")

rust_library(
    name = "common_iggy",
    srcs = glob([
        "src/**",
    ]),
    crate_root = "src/lib.rs",
    tags = [
        "common",
        "common_iggy",
    ],
    visibility = ["//visibility:public"],
    deps = [
        # Internal crates
        # External crates
        "//thirdparty/crates:iggy",
    ],
)

rust_doc(
    name = "doc",
    crate = ":common_iggy",
    tags = ["doc"],
    visibility = ["//visibility:public"],
)

rust_doc_test(
    name = "doc_test",
    crate = ":common_iggy",
    tags = ["doc-test"],
    visibility = ["//visibility:public"],
)
