load("@rules_rust//rust:defs.bzl", "rust_doc", "rust_doc_test", "rust_library")

rust_library(
    name = "common_ims",
    srcs = glob([
        "src/*.rs",
    ]),
    crate_root = "src/lib.rs",
    tags = [
        "common",
        "common_ims",
    ],
    visibility = ["//visibility:public"],
    deps = [
        # Internal crates
        "//alias:common_exchange",
        # External crates
        "//thirdparty/crates:iggy",
    ],
)

rust_doc(
    name = "doc",
    crate = ":common_ims",
    tags = ["doc"],
    visibility = ["//visibility:public"],
)

rust_doc_test(
    name = "doc_test",
    crate = ":common_ims",
    tags = ["doc-test"],
    visibility = ["//visibility:public"],
)
