load("@rules_rust//rust:defs.bzl", "rust_doc", "rust_doc_test", "rust_library")

rust_library(
    name = "common_sbe_errors",
    srcs = glob([
        "src/*.rs",
    ]),
    crate_root = "src/lib.rs",
    tags = [
        "common",
        "common_sbe_errors",
    ],
    visibility = ["//visibility:public"],
    deps = [
        # External crates
    ],
)

rust_doc(
    name = "doc",
    crate = ":common_sbe_errors",
    tags = ["doc"],
    visibility = ["//visibility:public"],
)

rust_doc_test(
    name = "doc_test",
    crate = ":common_sbe_errors",
    tags = ["doc-test"],
    visibility = ["//visibility:public"],
)
