[package]
name = "config_manager"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
readme.workspace = true
repository.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
# Internal crates
common_config = { workspace = true }
common_env = { workspace = true }
common_exchange = { workspace = true }
environment_manager = { workspace = true }
# External crates

[lints]
workspace = true
