[package]
name = "environment_manager"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
readme.workspace = true
repository.workspace = true
authors.workspace = true

[lints]
workspace = true
[dependencies]
common_env = { workspace = true }
common_platform = { workspace = true }
