load("@rules_rust//rust:defs.bzl", "rust_doc", "rust_doc_test", "rust_library")

rust_library(
    name = "client_error_ext",
    srcs = glob([
        "src/**",
    ]),
    crate_root = "src/lib.rs",
    tags = [
        "client_error_ext",
        "extensions",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//alias:common_sbe_errors",
        "//alias:sbe_messages_client",
        "//alias:sbe_types",
    ],
)

rust_doc(
    name = "doc",
    crate = ":client_error_ext",
    tags = ["doc"],
    visibility = ["//visibility:public"],
)

rust_doc_test(
    name = "doc_test",
    crate = ":client_error_ext",
    tags = ["doc-test"],
    visibility = ["//visibility:public"],
)
