[package]
name = "client_error_ext"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
readme.workspace = true
repository.workspace = true
authors.workspace = true
license.workspace = true


[lints]
workspace = true


[dependencies]
common_sbe_errors = { workspace = true }
sbe_messages_client = { workspace = true }
sbe_types = { workspace = true }
