load("@rules_rust//rust:defs.bzl", "rust_doc", "rust_doc_test", "rust_library")

rust_library(
    name = "cow_ext",
    srcs = glob([
        "src/**",
    ]),
    crate_root = "src/lib.rs",
    tags = [
        "cow_ext",
        "extensions",
    ],
    visibility = ["//visibility:public"],
    deps = [
    ],
)

rust_doc(
    name = "doc",
    crate = ":cow_ext",
    tags = ["doc"],
    visibility = ["//visibility:public"],
)

rust_doc_test(
    name = "doc_test",
    crate = ":cow_ext",
    tags = ["doc-test"],
    visibility = ["//visibility:public"],
)
