load("@rules_rust//rust:defs.bzl", "rust_doc", "rust_doc_test", "rust_library")

rust_library(
    name = "data_error_ext",
    srcs = glob([
        "src/**",
    ]),
    crate_root = "src/lib.rs",
    tags = [
        "data_error_ext",
        "extensions",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//alias:common_sbe_errors",
        "//alias:sbe_messages_data",
        "//alias:sbe_types",
    ],
)

rust_doc(
    name = "doc",
    crate = ":data_error_ext",
    tags = ["doc"],
    visibility = ["//visibility:public"],
)

rust_doc_test(
    name = "doc_test",
    crate = ":data_error_ext",
    tags = ["doc-test"],
    visibility = ["//visibility:public"],
)
